<resources>
    <string name="app_name">DeliveryApp</string>
    <string name="login">Login</string>
    <string name="login_description">Ingresa con tu correo y contraseña</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="register_here">Regístrate aquí</string>
    <string name="register">Registro</string>
    <string name="fill_your_info">Completa tus datos</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="phone">Teléfono</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="sign_up">Registrarte</string>
    <string name="back_to_login">Volver al login</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="complete_your_information">COMPLETA TU INFORMACIÓN</string>
    <string name="confirm">Confirmar</string>
    <string name="skip_step">Saltar este paso</string>
    <string name="home">Home</string>
    <string name="profile">Perfil</string>
    <string name="orders">Pedidos</string>
    <string name="categories">Categorías</string>
    <string name="products">Productos</string>
</resources>